--- a/index.html
+++ b/index.html
@@ -481,8 +481,14 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
     </div>
   </div>
 
-  <footer>
-    © AP Trading Tools • Built for MetaTrader 5
-  </footer>
+  <footer class="site-footer">
+  <div class="wrap">
+    <span>© AP Trading Tools</span>
+    <nav>
+      <a href="/support/">Support</a>
+      <!-- we’ll add Privacy/Refunds later -->
+    </nav>
+  </div>
+</footer>
 </body>
 </html>
