--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
     </div>
 
     <div class="note">
-      Need a preset or quick-start? Send me a message on MQL5. Support is via MQL5 messages/comments only.
+      Need a preset or quick-start? Send me a message.
     </div>
   </div>
 
