--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
 <meta name="description" content="MT5 Expert Advisors & Indicators — clean code, validator-safe, trader-friendly.">
 
   <style>
+    .site-footer{
+  border-top:1px solid rgba(255,255,255,.08);
+  background:rgba(10,12,16,.50);
+  backdrop-filter:saturate(120%) blur(4px);
+  padding:18px 0; margin-top:48px;
+}
+.site-footer .wrap{
+  max-width:1100px; margin:0 auto;
+  display:flex; justify-content:space-between; align-items:center;
+  gap:12px; padding:0 6px; font-size:14px; color:#cfe0ff;
+}
+.site-footer a{color:#9ec5ff; text-decoration:none; padding:4px 8px; border-radius:6px;}
+.site-footer a:hover{background:rgba(255,255,255,.08);}
+
     /* 1) Slightly stronger top overlay for readability */
 body::after{
   /* darker at top → fades down the page */
