--- a/index.html
+++ b/index.html
@@ -218,7 +218,20 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   <h2>London EAs</h2>
   <div class="grid3"><!-- add later --></div>
 </section>
-
+<div class="card">
+        <h3>AP London Breakout PRO (MT5)</h3>
+        <div class="tags">
+        <span class="tag">Breakout</span><span class="tag">London</span><span class="tag">MT5</span>
+        </div>
+        <p>07:00–08:00 (server) box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-safe gates.</p>
+        <div class="btns">
+          <a class="btn lemonsqueezy-button"
+          href="https://aptradingtools.lemonsqueezy.com/buy/64ec53a2-fcdd-4a93-a5f2-3b2edb944623">
+          Buy Now (MT5)
+          </a>
+          <a class="btn ghost" href="./AP_London_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
 <section id="sessions-ny" class="catalog">
   <h2>New York EAs</h2>
   <div class="grid3"><!-- add later --></div>
