--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 
 <section id="sessions-london" class="catalog">
   <h2>London EAs</h2>
-  <div class="grid3"><!-- add later --></div>
+  <div class="grid3">
   <div class="card">
         <h3>AP London Breakout PRO (MT5)</h3>
         <div class="tags">
