--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
     <span>© AP Trading Tools</span>
     <nav>
       <a href="/support/">Support</a>
-      <!-- we’ll add Privacy/Refunds later -->
+      <a href="/refunds/">Refunds</a>
+      <a href="/privacy/">Privacy</a>
     </nav>
   </div>
 </footer>
