--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   <div class="wrap">
     <span>© AP Trading Tools</span>
     <nav>
-      <a href="/support/">Support</a>
-      <a href="/refunds/">Refunds</a>
-      <a href="/privacy/">Privacy</a>
+      <a href="/support/"  target="_blank" rel="noopener">Support</a>
+      <a href="/refunds/"  target="_blank" rel="noopener">Refunds</a>
+      <a href="/privacy/"  target="_blank" rel="noopener">Privacy</a>
     </nav>
   </div>
 </footer>
