--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 <meta name="description" content="MT5 Expert Advisors & Indicators — clean code, validator-safe, trader-friendly.">
 
   <style>
+    .crumb{max-width:1100px; margin:10px auto 0; padding:0 6px;}
+.crumb a{
+  display:inline-block; padding:6px 10px;
+  border:1px solid rgba(255,255,255,.2); border-radius:999px;
+  text-decoration:none; color:#9ec5ff;
+}
+.crumb a:hover{background:rgba(255,255,255,.08);}
+
     .site-footer{
   border-top:1px solid rgba(255,255,255,.08);
   background:rgba(10,12,16,.50);
