--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   <div class="wrap">
     <span>© AP Trading Tools</span>
     <nav>
+      <a href="/terms/">Terms</a>
       <a href="/support/"  target="_blank" rel="noopener">Support</a>
       <a href="/refunds/"  target="_blank" rel="noopener">Refunds</a>
       <a href="/privacy/"  target="_blank" rel="noopener">Privacy</a>
