--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <link rel="shortcut icon" href="/assets/favicon.png?v=1" type="image/png">
 <script src="https://app.lemonsqueezy.com/js/lemon.js" defer></script>
 <body>
+  <video class="bg-video" autoplay muted loop playsinline poster="/assets/bg.webp">
+  <source src="/assets/video/bg.webm" type="video/webm">
+  <source src="/assets/video/bg.mp4"  type="video/mp4">
+</video>
   <header>
     <h1>AP Trading Tools</h1>
     <p class="lead">MT5 Expert Advisors & Indicators – clean code, and trader-friendly Support. </p>
@@ -44,6 +48,18 @@
 <meta name="description" content="MT5 Expert Advisors & Indicators — clean code, validator-safe, trader-friendly.">
 
   <style>
+    .bg-video{
+  position: fixed; inset: 0; z-index: -3;
+  width: 100%; height: 100%; object-fit: cover;
+  filter: contrast(105%) saturate(110%);
+  pointer-events: none; /* never block clicks */
+}
+/* keep your existing body::after overlay—it improves readability */
+
+/* Accessibility / bandwidth */
+@media (prefers-reduced-motion: reduce){ .bg-video{ display:none; } }
+@media (max-width: 600px){ .bg-video{ display:none; } } /* optional: hide on small screens */
+
     .crumb{max-width:1100px; margin:10px auto 0; padding:0 6px;}
 .crumb a{
   display:inline-block; padding:6px 10px;
