--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <link rel="shortcut icon" href="/assets/favicon.png?v=1" type="image/png">
 <script src="https://app.lemonsqueezy.com/js/lemon.js" defer></script>
 <body>
-  <video class="bg-video" autoplay muted loop playsinline poster="/assets/bg.webp">
-  <source src="/assets/video/bg.webm" type="video/webm">
-  <source src="/assets/video/bg.mp4"  type="video/mp4">
+  <video class="bg-video" autoplay muted playsinline loop poster="/assets/bg.webp" preload="metadata">
+  <source src="/assets/video/bg.webm" type="video/webm" />
+  <source src="/assets/video/bg.mp4"  type="video/mp4"  />
 </video>
   <header>
     <h1>AP Trading Tools</h1>
