--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
   muted
   playsinline
   loop
-  preload="auto"         <!-- was metadata -->
+  preload="auto"
   disablepictureinpicture
 >
-  <!-- Put MP4 first (better fallback behavior on some browsers), WebM second -->
-  <source src="/assets/video/bg.mp4"  type="video/mp4" />
-  <source src="/assets/video/bg.webm" type="video/webm" />
+  <source src="/assets/video/bg.mp4?v=7"  type="video/mp4" />
+  <source src="/assets/video/bg.webm?v=7" type="video/webm" />
 </video>
   <header>
     <h1>AP Trading Tools</h1>
