--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   playsinline
   loop
   preload="auto"
+  poster="/assets/bg.webp"
+  aria-hidden="true"
+  tabindex="-1"
   disablepictureinpicture
 >
   <source src="/assets/video/bg.mp4?v=7"  type="video/mp4" />
