--- a/AP Btc Session VWAP Bands MT5/index.html
+++ b/AP Btc Session VWAP Bands MT5/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta name="description" content="Session/anchored VWAP for BTC with ±1/±2 bands and clean visuals. Lightweight, screenshot-friendly, and free on MQL5." />
+<meta name="description" content="Session/anchored VWAP with ±1/±2 bands and clean visuals. Lightweight, screenshot-friendly, and free on MQL5." />
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>AP Btc Session VWAP Bands MT5 — Docs</title>
@@ -24,11 +24,11 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
 <body>
 <div class="wrap">
   <a class="ghost btn" href="../">← Back to Home</a>
-  <h1>AP Btc Session VWAP Bands MT5</h1>
+  <h1>AP VWAP Bands Pro MT5</h1>
   <p class="lead">Session/anchored VWAP with ±1/±2 bands and clean visuals. English only; support via MQL5 messages/comments.</p>
 
   <div class="btns">
-  <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Get on MQL5</a>
+  <a class="btn" href="https://www.mql5.com/en/market/product/150646" target="_blank" rel="noopener">Get on MQL5</a>
   <a class="ghost btn" href="README.md" target="_blank" rel="noopener">Quick Start</a>
   <a class="ghost btn" href="Pinned%20comment%20AP%20BTC%20Session%20VWAP%20....txt" target="_blank" rel="noopener">Pinned Comment</a>
 </div>
