--- a/index.html
+++ b/index.html
@@ -260,9 +260,10 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
         </div>
         <p>07:00–08:00 (server) box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-safe gates.</p>
         <div class="btns">
-          <a class="btn lemonsqueezy-button"
-          href="https://aptradingtools.lemonsqueezy.com/buy/64ec53a2-fcdd-4a93-a5f2-3b2edb944623">
-          Buy Now (MT5)
+          <a class="btn"
+          href="https://aptradingtools.gumroad.com/l/mopapd"
+          target="_blank" rel="noopener">
+          Buy (MT5)
           </a>
           <a class="btn ghost" href="./AP_London_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
