--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
 <meta name="description" content="MT5 Expert Advisors & Indicators — clean code, validator-safe, trader-friendly.">
 
   <style>
+    /* Force Gumroad buttons to look like site buttons */
+a.gumroad-button {
+  display: inline-block;
+  padding: 10px 18px;
+  border-radius: 6px;
+  background: #007bff;       /* Bootstrap blue */
+  color: #fff !important;
+  font-weight: 600;
+  text-decoration: none;
+  border: none;
+  transition: background 0.2s ease, transform 0.1s ease;
+}
+
+a.gumroad-button:hover {
+  background: #0056b3;       /* darker blue hover */
+  transform: translateY(-1px);
+}
+
     .bg-video{
   position:fixed; inset:0;
   width:100vw; height:100vh;
