--- a/index.html
+++ b/index.html
@@ -59,22 +59,25 @@
 <meta name="description" content="MT5 Expert Advisors & Indicators — clean code, validator-safe, trader-friendly.">
 
   <style>
-    /* Force Gumroad buttons to look like site buttons */
+    /* Force override Gumroad injected styles */
 a.gumroad-button {
-  display: inline-block;
-  padding: 10px 18px;
-  border-radius: 6px;
-  background: #007bff;       /* Bootstrap blue */
+  display: inline-block !important;
+  padding: 10px 18px !important;
+  border-radius: 6px !important;
+  background: #007bff !important;   /* blue */
   color: #fff !important;
-  font-weight: 600;
-  text-decoration: none;
-  border: none;
-  transition: background 0.2s ease, transform 0.1s ease;
+  font-weight: 600 !important;
+  text-decoration: none !important;
+  border: none !important;
+  opacity: 1 !important;
+  filter: none !important;
+  box-shadow: none !important;
+  transition: background 0.2s ease, transform 0.1s ease !important;
 }
 
 a.gumroad-button:hover {
-  background: #0056b3;       /* darker blue hover */
-  transform: translateY(-1px);
+  background: #0056b3 !important;   /* darker blue hover */
+  transform: translateY(-1px) !important;
 }
 
     .bg-video{
