--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
         </div>
         <p>07:00–08:00 (server) box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-safe gates.</p>
         <div class="btns">
-          <a class="btn gumroad-button" href="https://aptradingtools.gumroad.com/l/mopapd">
-          Buy (MT5)
+          <a class="gumroad-button" href="https://aptradingtools.gumroad.com/l/mopapd">
+          Buy Now (MT5)
           </a>
           <a class="btn ghost" href="./AP_London_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
