--- a/index.html
+++ b/index.html
@@ -401,14 +401,29 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
     </div>
     
   <div class="card">
-        <h3>AP Oil Navigator PRO (MT5)</h3>
-        <div class="tags"><span class="tag">MT5</span><span class="tag">XTIUSD/USOIL</span><span class="tag">M30</span></div>
-        <p>Trend+pullback for XTIUSD/USOIL on M30. ATR SL/TP, pending expiry, validator-safe gates.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148909" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20Oil%20Navigator%20PRO%20MT5/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+  <h3>AP Oil Navigator PRO (MT5)</h3>
+  <div class="tags">
+    <span class="tag">Oil</span><span class="tag">XTIUSD</span><span class="tag">MT5</span>
+  </div>
+  <p>
+    Trend + pullback entries on XTIUSD/USOIL (M30) with ATR-based SL/TP, session & spread guards,
+    and calm order flow. No martingale. No grid.
+  </p>
+
+  <div class="btns">
+    <a class="btn"
+       href="https://aptradingtools.gumroad.com/l/ryaqle"
+       target="_blank" rel="noopener">
+      Buy Now (MT5)
+    </a>
+
+    <a class="btn ghost"
+       href="./AP_Oil_Navigator_PRO/"
+       target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+</div>
 </section>
 
 <section id="indicators" class="catalog">
