--- a/index.html
+++ b/index.html
@@ -274,22 +274,32 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   <h2>London EAs</h2>
   <div class="grid3">
   <div class="card">
-  <h3>AP London Breakout PRO (MT5)</h3>
+  <h3>AP London Breakout PRO</h3>
   <div class="tags">
-    <span class="tag">Breakout</span><span class="tag">London</span><span class="tag">MT5</span>
+    <span class="tag">Breakout</span><span class="tag">London</span>
+    <span class="tag">MT4</span><span class="tag">MT5</span>
   </div>
   <p>
     07:00–08:00 (server) box breakout via pending orders. SL at opposite side (+extra),
     TP by R-multiple. One set per window, validator-safe gates.
   </p>
+
   <div class="btns">
-    <!-- Blue Buy button (same style as the others) -->
+    <!-- MT5 -->
     <a class="btn"
        href="https://aptradingtools.gumroad.com/l/mopapd"
        target="_blank" rel="noopener">
       Buy Now (MT5)
     </a>
-    <!-- Grey "Docs" button (same style as the others) -->
+
+    <!-- MT4 -->
+    <a class="btn"
+       href="https://aptradingtools.gumroad.com/l/htmxm"
+       target="_blank" rel="noopener">
+      Buy Now (MT4)
+    </a>
+
+    <!-- Docs (shared) -->
     <a class="btn ghost"
        href="./AP_London_Breakout_PRO/"
        target="_blank" rel="noopener">
