--- a/AP_London_Breakout_PRO/index.html
+++ b/AP_London_Breakout_PRO/index.html
@@ -27,8 +27,9 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
   <p class="lead">07:00–08:00 (server) session-box breakout with pending orders, SL/TP by R-multiple, strict validator-safe logic.</p>
 
   <div class="btns">
-    <!-- Replace the product ID with your real one -->
-    <a class="btn" href="https://www.mql5.com/en/market/product/148704" target="_blank" rel="noopener">Get on MQL5</a>
+    <a class="btn btn-primary" href="https://aptradingtools.gumroad.com/l/mopapd" target="_blank" rel="noopener">
+    Buy on Gumroad (MT5)
+    </a>
     <a class="ghost btn" href="Quick_Start.md" target="_blank" rel="noopener">Quick Start</a>
     <a class="ghost btn" href="Inputs_Reference.md" target="_blank" rel="noopener">Inputs</a>
     <a class="ghost btn" href="AP_LBX_Default.set" target="_blank" rel="noopener">Preset (.set)</a>
