--- a/AP_London_Breakout_PRO/index.html
+++ b/AP_London_Breakout_PRO/index.html
@@ -35,6 +35,18 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
     <a class="ghost btn" href="AP_LBX_Default.set" target="_blank" rel="noopener">Preset (.set)</a>
     <a class="ghost btn" href="Version.txt" target="_blank" rel="noopener">Version</a>
   </div>
+  
+<h3 id="presets">Example presets (.set)</h3>
+<p>
+  These examples were tested on IC Markets demo. Use them as a starting point only.
+  Always adjust session time, spread guard and risk to your own broker before live trading.
+</p>
+<ul>
+  <li><a href="/AP_London_Breakout_PRO/Safe.set" download>Safe</a></li>
+  <li><a href="/AP_London_Breakout_PRO/Balanced.set" download>Balanced</a></li>
+  <li><a href="/AP_London_Breakout_PRO/Aggressive.set" download>Aggressive</a></li>
+  <li><a href="/AP_London_Breakout_PRO/AP_London_Breakout_PRO.set" download>Defaults</a></li>
+</ul>
 
   <div class="card">
     <h3>What it does</h3>
