--- a/AP_London_Breakout_PRO/index.html
+++ b/AP_London_Breakout_PRO/index.html
@@ -36,7 +36,7 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
     <a class="ghost btn" href="Version.txt" target="_blank" rel="noopener">Version</a>
   </div>
   
-<h3 id="presets">Example presets (.set)</h3>
+<a class="btn btn-ghost" href="/AP_London_Breakout_PRO/#presets">Presets (.set)</a>
 <p>
   These examples were tested on IC Markets demo. Use them as a starting point only.
   Always adjust session time, spread guard and risk to your own broker before live trading.
