--- a/index.html
+++ b/index.html
@@ -220,6 +220,20 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 
 @media (max-width: 900px){ .grid3{grid-template-columns: repeat(2, minmax(220px,1fr));} }
 @media (max-width: 600px){ .grid3{grid-template-columns: 1fr;} }
+/* keep rows tight but consistent with the rest of the site */
+.btns { display:flex; flex-wrap:wrap; gap:8px; margin-top:10px; }
+.btns.btns--docs { margin-top:6px; }
+
+/* ensure ghost buttons look exactly like the other “Docs” buttons */
+.btn.btn-ghost {
+  background:transparent;
+  border:1px solid rgba(255,255,255,0.2);
+  color:#cfe3ff;
+}
+.btn.btn-ghost:hover {
+  border-color: rgba(255,255,255,0.35);
+  color:#ffffff;
+}
 
   </style>
 </head>
