--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   </div>
   <div class="btns btns--docs">
     <a class="btn btn-ghost" href="/AP_London_Breakout_PRO/">Docs</a>
-    <a class="btn btn-ghost" href="/AP_London_Breakout_PRO_MT4/">Docs (MT4)</a>
+                                   <a class="btn btn-ghost" href="/AP_London_Breakout_PRO_MT4/">Docs</a>
   </div>
 </div>
 </section>
