--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   border-color: rgba(255,255,255,0.35);
   color:#ffffff;
 }
+/* push items after the spacer to the right */
+.btns .spacer { flex: 1; }
 
   </style>
 </head>
