--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ a.gumroad-button::after {
 @media (prefers-reduced-motion: reduce){ .bg-video{ display:none; } }
 @media (max-width: 600px){ .bg-video{ display:none; } }
 
+/* push items after the spacer to the right */
+.btns .spacer { flex: 1; }
 
     .crumb{max-width:1100px; margin:10px auto 0; padding:0 6px;}
 .crumb a{
@@ -234,8 +236,6 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   border-color: rgba(255,255,255,0.35);
   color:#ffffff;
 }
-/* push items after the spacer to the right */
-.btns .spacer { flex: 1; }
 
   </style>
 </head>
@@ -317,7 +317,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
     Docs
   </a>
   <a class="btn btn-ghost" href="/AP_London_Breakout_PRO_MT4/" target="_blank" rel="noopener">
-    Docs (MT4)
+    Docs
   </a>
 </div>
 </div>
