--- a/index.html
+++ b/index.html
@@ -304,23 +304,23 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   <!-- Buy buttons (left) -->
   <a class="btn btn-primary"
      href="https://aptradingtools.gumroad.com/l/mopapd" target="_blank" rel="noopener">
-    Buy Now 
+    Buy Now (MT5)
   </a>
 
-            <a class="btn btn-primary"
-               href="https://aptradingtools.gumroad.com/l/htmxm" target="_blank" rel="noopener">
-              Buy Now 
-            </a>
+  <a class="btn btn-primary"
+    href="https://aptradingtools.gumroad.com/l/htmxm" target="_blank" rel="noopener">
+    Buy Now (MT4)
+  </a>
 
-  <!-- Push the docs to the far right -->
-  <span class="spacer"></span>
 
   <!-- Docs buttons (right) -->
   <a class="btn btn-ghost" href="/AP_London_Breakout_PRO/" target="_blank" rel="noopener">
-    Docs (MT5)
+    Docs
+    <!-- Push the docs to the far right -->
+  <span class="spacer"></span>
   </a>
   <a class="btn btn-ghost" href="/AP_London_Breakout_PRO_MT4/" target="_blank" rel="noopener">
-    Docs (MT4)
+    Docs
   </a>
 </div>
 
