--- a/index.html
+++ b/index.html
@@ -321,16 +321,16 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 
   <!-- Docs buttons (right) -->
 <a class="btn btn-ghost" href="/AP_London_Breakout_PRO/" target="_blank" rel="noopener">
-  Docs (MT5)
+  Docs 
 </a>
 
 <!-- three blank placeholders, same size as a Docs button -->
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">Docs</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">Docs</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">Docs</span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
 
 <a class="btn btn-ghost" href="/AP_London_Breakout_PRO_MT4/" target="_blank" rel="noopener">
-  Docs (MT4)
+  Docs 
 </a>
 </div>
 
