--- a/index.html
+++ b/index.html
@@ -328,7 +328,12 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 <span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
 <span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
 <span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
-
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>    
 <a class="btn btn-ghost" href="/AP_London_Breakout_PRO_MT4/" target="_blank" rel="noopener">
   Docs 
 </a>
