--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
           href="https://aptradingtools.lemonsqueezy.com/buy/f773c823-4beb-41b9-ad48-244a89a87fbf">
           Buy Now (MT5)
           </a>
-          <a class="btn ghost" href="./London_Session_Breakout/" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./London Session Breakout/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
     
