--- a/index.html
+++ b/index.html
@@ -249,19 +249,27 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   <h2>Featured EAs</h2>
   <div class="grid3">
     <div class="card">
-        <h3>AP London Session Breakout (MT5)</h3>
-        <div class="tags">
-        <span class="tag">Breakout</span><span class="tag">Time-box</span><span class="tag">MT5</span>
-        </div>
-        <p>Structured London session range breakouts with session filters, pending-order safety, and validator-clean logic.</p>
-        <div class="btns">
-          <a class="btn lemonsqueezy-button"
-          href="https://aptradingtools.lemonsqueezy.com/buy/f773c823-4beb-41b9-ad48-244a89a87fbf">
-          Buy Now (MT5)
-          </a>
-          <a class="btn ghost" href="./London%20Session%20Breakout/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+  <h3>AP London Session Breakout (MT5)</h3>
+  <div class="tags">
+    <span class="tag">Breakout</span><span class="tag">Time-box</span><span class="tag">MT5</span>
+  </div>
+  <p>Structured London session range breakouts with session filters, pending-order safety, and validator-clean logic.</p>
+
+  <div class="btns">
+    <!-- Buy on Gumroad -->
+    <a class="btn btn-primary"
+       href="https://aptradingtools.gumroad.com/l/azgph"
+       target="_blank" rel="noopener">
+      Buy Now (MT5)
+    </a>
+
+    <!-- Docs (fixed path + class) -->
+    <a class="btn btn-ghost" href="/London_Session_Breakout/" target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+</div>
+
     
     <div class="card">
         <h3>AP InsideBar Breakout (MT5)</h3>
