--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
     </a>
 
     <!-- Docs (fixed path + class) -->
-    <a class="btn btn-ghost" href="/London_Session_Breakout/" target="_blank" rel="noopener">
+    <a class="btn btn-ghost" href="/London%20Session%20Breakout/" target="_blank" rel="noopener">
       Docs
     </a>
   </div>
