--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <!-- Favicons -->
 <link rel="icon" href="/assets/favicon.png?v=1" type="image/png">
 <link rel="shortcut icon" href="/assets/favicon.png?v=1" type="image/png">
-<script src="https://app.lemonsqueezy.com/js/lemon.js" defer></script>
 <body>
   <video
   class="bg-video"
@@ -341,7 +340,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 <span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
 <span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
 <a class="btn btn-ghost" href="/AP_London_Breakout_PRO/AP_London_Breakout_PRO_MT4/" target="_blank" rel="noopener">
-  Docs
+  Docs MT4
 </a>
 </div>
 </div>
