--- a/London Session Breakout/index.html
+++ b/London Session Breakout/index.html
@@ -73,8 +73,11 @@
     </div>
 
     <p>
-      <a class="btn" href="https://www.mql5.com/en/market/product/148680" target="_blank" rel="noopener">Get on MQL5</a>
-      <a class="btn ghost" href="../">← Back to AP Trading Tools</a>
+      <a class="btn btn-primary"
+   href="https://aptradingtools.gumroad.com/l/azgph"
+   target="_blank" rel="noopener">
+  Buy Now (MT5)
+</a>
     </p>
   </div>
 </body>
