--- a/index.html
+++ b/index.html
@@ -269,18 +269,21 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   </div>
 </div>
 
-    
     <div class="card">
-        <h3>AP InsideBar Breakout (MT5)</h3>
-        <div class="tags"><span class="tag">Price Action</span><span class="tag">Breakout</span><span class="tag">MT5</span></div>
-        <p>Inside-bar detection with smart pending placement and automatic opposite-side cleanup after fills.</p>
-        <div class="btns">
-          <a class="btn lemonsqueezy-button"
-          href="https://aptradingtools.lemonsqueezy.com/buy/8c6e289c-279b-4759-88ba-9b61cfa83b04">
-          Buy Now (MT5)
-          </a>
-        </div>
-      </div>
+  <h3>AP InsideBar Breakout (MT5)</h3>
+  <div class="tags">
+    <span class="tag">Price Action</span><span class="tag">Breakout</span><span class="tag">MT5</span>
+  </div>
+  <p>Inside-bar detection with smart pending placement and automatic opposite-side cleanup after fills.</p>
+
+  <div class="btns">
+    <a class="btn btn-primary"
+       href="https://aptradingtools.gumroad.com/l/qtcoqn"
+       target="_blank" rel="noopener">
+      Buy Now (MT5)
+    </a>
+  </div>
+</div>
     
     <div class="card">
         <h3>AP DayTrader Impulse Box (MT5)</h3>
