--- a/index.html
+++ b/index.html
@@ -460,10 +460,18 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 
   <div class="btns">
     <a class="btn"
-   href="https://buy.stripe.com/7sY4gBfCw1Wb9yz0jhdjO00"
-   target="_blank" rel="noopener">
-   Buy Now (MT5)
-</a>
+       href="https://buy.stripe.com/7sY4gBfCw1Wb9yz0jhdjO00"
+       target="_blank" rel="noopener">
+      Buy Now (MT5)
+    </a>
+
+    <a class="btn btn-ghost"
+       href="./AP_Oil_Navigator_PRO/"
+       target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+</div>
 
     <a class="btn ghost"
        href="./AP_Oil_Navigator_PRO/"
