--- a/index.html
+++ b/index.html
@@ -469,10 +469,9 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   </div>
 </div>
 
-    <a class="btn ghost"
-       href="./AP_Oil_Navigator_PRO/"
-       target="_blank" rel="noopener">
-      Docs
+    <a class="btn btn-ghost"
+   href="/AP_Oil_Navigator_PRO/"
+   target="_blank" rel="noopener">Docs</a>
     </a>
   </div>
 </div>
