--- a/index.html
+++ b/index.html
@@ -589,6 +589,24 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
         </div>
       </div>
 </section>
+        <div class="card">
+        <h3>AP Trade Assistant (MT5)</h3>
+        <div class="tags">
+          <span class="tag">Utility</span><span class="tag">Assistant</span><span class="tag">MT5</span>
+        </div>
+        <p>
+          Automated trade assistant with clear risk controls and streamlined order management.
+        </p>
+        <div class="btns">
+          <a class="btn"
+             href="https://buy.stripe.com/cNifZj9e8bwL6mn4zxdjO01"
+             target="_blank" rel="noopener">
+            Buy Now (MT5)
+          </a>
+          <!-- Optional: add a Docs page later and link it here -->
+          <!-- <a class="btn ghost" href="/AP%20Trade%20Assistant%20MT5/" target="_blank" rel="noopener">Docs</a> -->
+        </div>
+        </div>
 
 <section id="levels" class="catalog">
   <h2>Levels &amp; Context</h2>
