--- a/index.html
+++ b/index.html
@@ -607,6 +607,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
           <!-- <a class="btn ghost" href="/AP%20Trade%20Assistant%20MT5/" target="_blank" rel="noopener">Docs</a> -->
         </div>
         </div>
+    </section>
 
 <section id="levels" class="catalog">
   <h2>Levels &amp; Context</h2>
