--- a/index.html
+++ b/index.html
@@ -597,16 +597,19 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
         <p>
           Automated trade assistant with clear risk controls and streamlined order management.
         </p>
-        <div class="btns">
-          <a class="btn"
-             href="https://buy.stripe.com/cNifZj9e8bwL6mn4zxdjO01"
-             target="_blank" rel="noopener">
-            Buy Now (MT5)
-          </a>
-          <!-- Optional: add a Docs page later and link it here -->
-          <!-- <a class="btn ghost" href="/AP%20Trade%20Assistant%20MT5/" target="_blank" rel="noopener">Docs</a> -->
-        </div>
-        </div>
+          <div class="btns">
+    <a class="btn"
+       href="https://buy.stripe.com/cNifZj9e8bwL6mn4zxdjO01"
+       target="_blank" rel="noopener">
+      Buy Now (MT5)
+    </a>
+    <a class="btn ghost"
+       href="/AP%20Trade%20Assistant%20MT5/"
+       target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+
     </section>
 
 <section id="levels" class="catalog">
