--- a/AP Trade Assistant MT5/index.html
+++ b/AP Trade Assistant MT5/index.html
@@ -42,7 +42,7 @@
 
     <div class="pillbar">
       <a class="pill" href="https://buy.stripe.com/cNifZj9e8bwL6mn4zxdjO01" target="_blank" rel="noopener">Buy on Stripe</a>
-      <a class="pill ghost" href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start</a>
+      <a class="pill ghost" href="./quick-start.html" target="_blank" rel="noopener">Quick Start</a>
       <a class="pill ghost" href="#inputs">Inputs</a>
       <a class="pill ghost" href="#version">Version</a>
     </div>
@@ -159,7 +159,7 @@
     <div class="panel">
       <h3>Files in this folder</h3>
       <ul>
-        <li><a href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start.md</a></li>
+        <li><a href="./quick-start.html" target="_blank" rel="noopener">quick-start.html</a></li>
         <!-- add presets or extra docs here when you create them -->
       </ul>
     </div>
