--- a/AP Trade Assistant MT5/index.html
+++ b/AP Trade Assistant MT5/index.html
@@ -156,13 +156,17 @@
       <p><strong>v1.4</strong> — initial public release.</p>
     </div>
 
-    <div class="panel">
-      <h3>Files in this folder</h3>
-      <ul>
-        <li><a href="./quick-start.html" target="_blank" rel="noopener">quick-start.html</a></li>
-        <!-- add presets or extra docs here when you create them -->
-      </ul>
-    </div>
+   <div class="panel">
+  <h3>Files in this folder</h3>
+  <ul>
+    <li>
+      <a href="./quick-start.html" target="_blank" rel="noopener">
+        Quick Start guide
+      </a>
+    </li>
+    <!-- add presets or extra docs here when you create them -->
+  </ul>
+</div>
   </div>
 </body>
 </html>
