--- a/AP Trade Assistant MT5/index.html
+++ b/AP Trade Assistant MT5/index.html
@@ -160,7 +160,7 @@
   <h3>Files in this folder</h3>
   <ul>
     <li>
-      <a href="./Quick Start guide" target="_blank" rel="noopener">
+      <a href="./quick-start.html" target="_blank" rel="noopener">
         Quick Start guide
       </a>
     </li>
