--- a/AP Trade Assistant MT5/index.html
+++ b/AP Trade Assistant MT5/index.html
@@ -41,7 +41,7 @@
     </p>
 
     <div class="pillbar">
-      <a class="pill" href="https://buy.stripe.com/cNifZj9e8bwL6mn4zxdjO01" target="_blank" rel="noopener">Buy on Stripe</a>
+      <a class="pill" href="https://buy.stripe.com/cNifZj9e8bwL6mn4zxdjO01" target="_blank" rel="noopener">Buy Now</a>
       <a class="pill ghost" href="./quick-start.html" target="_blank" rel="noopener">Quick Start</a>
       <a class="pill ghost" href="#inputs">Inputs</a>
       <a class="pill ghost" href="#version">Version</a>
