--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -37,7 +37,7 @@
     <p class="muted">Trend+pullback for XTIUSD/USOIL on M30 with ATR SL/TP, pending-order expiry, and validator-friendly safety gates.</p>
 
     <div class="pillbar">
-      <a class="pill" href="https://buy.stripe.com/7sY4gBfCw1Wb9yz0jhdjO00" target="_blank" rel="noopener">Buy on Stripe</a>
+      <a class="pill" href="https://buy.stripe.com/7sY4gBfCw1Wb9yz0jhdjO00" target="_blank" rel="noopener">Buy Now</a>
       <a class="pill ghost" href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start</a>
       <a class="pill ghost" href="#inputs">Inputs</a>
       <a class="pill ghost" href="#presets">Presets (.set)</a>
