--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -38,7 +38,7 @@
 
     <div class="pillbar">
       <a class="pill" href="https://buy.stripe.com/7sY4gBfCw1Wb9yz0jhdjO00" target="_blank" rel="noopener">Buy Now</a>
-      <a class="pill ghost" href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start</a>
+      <a class="pill ghost" href="./quick-start.html" target="_blank" rel="noopener">Quick Start</a>
       <a class="pill ghost" href="#inputs">Inputs</a>
       <a class="pill ghost" href="#presets">Presets (.set)</a>
       <a class="pill ghost" href="#version">Version</a>
@@ -148,7 +148,7 @@
     <div class="panel">
       <h3>Files in this folder</h3>
       <ul>
-        <li><a href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start.md</a></li>
+        <li><a href="./quick-start.html" target="_blank" rel="noopener">Quick Start.md</a></li>
         <li><a href="./AP_Oil_Navigator_PRO__Balanced.set" download>AP_Oil_Navigator_PRO__Balanced.set</a></li>
         <li><a href="./AP_Oil_Navigator_PRO__Conservative.set" download>AP_Oil_Navigator_PRO__Conservative.set</a></li>
         <li><a href="./AP_Oil_Navigator_PRO__Tester_Relaxed.set" download>AP_Oil_Navigator_PRO__Tester_Relaxed.set</a></li>
