--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -148,7 +148,7 @@
     <div class="panel">
       <h3>Files in this folder</h3>
       <ul>
-        <li><a href="./quick-start.html" target="_blank" rel="noopener">Quick Start.md</a></li>
+        <li><a href="./quick-start.html" target="_blank" rel="noopener">Quick Start</a></li>
         <li><a href="./AP_Oil_Navigator_PRO__Balanced.set" download>AP_Oil_Navigator_PRO__Balanced.set</a></li>
         <li><a href="./AP_Oil_Navigator_PRO__Conservative.set" download>AP_Oil_Navigator_PRO__Conservative.set</a></li>
         <li><a href="./AP_Oil_Navigator_PRO__Tester_Relaxed.set" download>AP_Oil_Navigator_PRO__Tester_Relaxed.set</a></li>
