--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -29,10 +29,15 @@
         <span class="tag">MT5</span>
       </p>
 
-      <p>
-        <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Buy on MQL5</a>
+           <p>
+        <a class="btn primary"
+           href="https://buy.stripe.com/dRmbJ3aicdET3abd63djO02"
+           target="_blank" rel="noopener">
+          Buy Now (MT5)
+        </a>
         <a class="btn" href="#presets">Presets (.set)</a>
       </p>
+
 
       <hr/>
 
