--- a/index.html
+++ b/index.html
@@ -384,17 +384,19 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 <section id="forex" class="catalog">
   <h2>Forex EAs <span class="muted">(Majors / Minors / Exotics)</span></h2>
   <div class="grid3">
-  <div class="card">
-        <h3>AP Forex DayTrader (MT5)</h3>
-        <div class="tags">
-        <span class="tag">EA</span><span class="tag">Forex</span><span class="tag">MT5</span>
-        </div>
-        <p>Intraday day-trading engine: Momentum Pullback (M15) + Session Breakout (M5). Validator-safe with clear risk controls.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP_Forex_DayTrader_MT5/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+   <div class="btns">
+    <a class="btn"
+       href="https://buy.stripe.com/dRmbJ3aicdET3abd63djO02"
+       target="_blank" rel="noopener">
+      Buy Now (MT5)
+    </a>
+    <a class="btn ghost"
+       href="./AP_Forex_DayTrader_MT5/"
+       target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+
     </div>
 </section>
 
