--- a/index.html
+++ b/index.html
@@ -383,22 +383,39 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 
 <section id="forex" class="catalog">
   <h2>Forex EAs <span class="muted">(Majors / Minors / Exotics)</span></h2>
-  <div class="grid3">
-   <div class="btns">
-    <a class="btn"
-       href="https://buy.stripe.com/dRmbJ3aicdET3abd63djO02"
-       target="_blank" rel="noopener">
-      Buy Now (MT5)
-    </a>
-    <a class="btn ghost"
-       href="./AP_Forex_DayTrader_MT5/"
-       target="_blank" rel="noopener">
-      Docs
-    </a>
-  </div>
 
-    </div>
+  <div class="grid3">
+    <article class="product-card">
+      <div class="product-tags">
+        <span class="tag">EA</span>
+        <span class="tag">MT5</span>
+        <span class="tag">Forex</span>
+        <span class="tag">Intraday</span>
+      </div>
+
+      <h3 class="product-title">AP Forex DayTrader (MT5)</h3>
+
+      <p class="product-body">
+        Intraday momentum-pullback + London session breakout for major FX pairs,
+        with ATR-based SL/TP, breakeven, and trailing.
+      </p>
+
+      <div class="product-actions">
+        <a class="btn primary"
+           href="https://buy.stripe.com/dRmbJ3aicdET3abd63djO02"
+           target="_blank" rel="noopener">
+          Buy Now (MT5)
+        </a>
+        <a class="btn ghost"
+           href="./AP_Forex_DayTrader_MT5/"
+           target="_blank" rel="noopener">
+          Docs
+        </a>
+      </div>
+    </article>
+  </div>
 </section>
+
 
 <section id="crypto" class="catalog">
   <h2>Crypto EAs</h2>
