--- a/AP ATR Trail (MT5)/index.html
+++ b/AP ATR Trail (MT5)/index.html
@@ -86,28 +86,32 @@
       Lightweight and neutral for discretionary trade management and screenshots.
     </p>
 
+    <!-- Main CTA: free ZIP from your site only -->
+    <div class="btns">
+      <a class="btn"
+         href="./AP_ATR_Trail_MT5.zip"
+         download>
+        Download Free ZIP
+      </a>
+    </div>
+
     <div class="card">
-      <h2>Get AP ATR Trail (free)</h2>
+      <h2>Get updates (optional)</h2>
       <p>
-        Enter your email to receive the download link and occasional updates about new tools.
+        If you’d like updates about new tools and presets, leave your email below.
         You can unsubscribe at any time.
       </p>
 
       <form class="dl-form" method="post" action="#">
-        <!-- TODO: replace action with your real form endpoint -->
+        <!-- TODO: replace action with your real form endpoint when you’re ready -->
         <label for="email" class="sr-only">Email</label>
         <input type="email"
                id="email"
                name="email"
                required
                placeholder="you@example.com">
-        <button type="submit" class="btn">Get free download</button>
+        <button type="submit" class="btn">Get email updates</button>
       </form>
-
-      <p class="muted small">
-        Direct download (for now): 
-        <a href="./AP_ATR_Trail_MT5.zip" download>AP_ATR_Trail_MT5.zip</a>
-      </p>
     </div>
 
     <div class="btns">
@@ -215,4 +219,6 @@
   </div>
 </body>
 </html>
+
+
 
