--- a/index.html
+++ b/index.html
@@ -523,14 +523,24 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
       </div>
     
     <div class="card">
-        <h3>AP ATR Trail (Indicator)</h3>
-        <div class="tags"><span class="tag">Indicator</span><span class="tag">ATR</span></div>
-        <p>Clean ATR trailing line for discretionary exits or screenshots.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148873" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20ATR%20Trail%20(MT5)/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+  <h3>AP ATR Trail (Indicator)</h3>
+  <div class="tags">
+    <span class="tag">Indicator</span><span class="tag">ATR</span>
+  </div>
+  <p>Clean ATR trailing line for discretionary exits or screenshots.</p>
+  <div class="btns">
+    <a class="btn"
+       href="./AP%20ATR%20Trail%20(MT5)/AP_ATR_Trail_MT5.zip"
+       download>
+      Download Free
+    </a>
+    <a class="btn ghost"
+       href="./AP%20ATR%20Trail%20(MT5)/"
+       target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+</div>
     
     <div class="card">
         <h3>MA Cross Alerts</h3>
